Bug 126859 - Custom document properties cannot be accessed in LO 6.3
Summary: Custom document properties cannot be accessed in LO 6.3
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: x86 (IA32) macOS (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.1
Keywords: bibisected, bisected, regression
: 126794 127153 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-12 18:56 UTC by Fred
Modified: 2019-08-26 05:05 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document, with screenshots (109.92 KB, application/vnd.oasis.opendocument.text)
2019-08-12 18:58 UTC, Fred
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fred 2019-08-12 18:56:52 UTC
Description:
Writer document created with LO 6.2.5 (and other versions, also with NeoOffice) with custom properties which are used as fields in the document.
When this document is loaded into 6.3, the File - Properties - Custom Properties dialog does not show the custom properties, they cannot be accessed or changed.
The fields, however, can still be inserted or removed Insert - Fields - More Fields -> DocInformation - Custom.

Note: not tested with other components such as Calc.

Steps to Reproduce:
1. Using LO with v < 6.3, create writer doc with custom properties (File - properties - custom properties) and give them some values
2. Use those values in doc, then save (I used .odt as that is my default)
3. Open with LO 6.3.0.4, File - Properties - Custom Properties will not show any custom properties.  Insert - Fields - More Fields will still show them for insertion.

Actual Results:
No custom fields visible in File - Properties - Custom Properties

Expected Results:
Should pick up custom property fields in document and provide access to them as before.


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: TextDocument
[Information guessed from browser]
OS: Mac OS X (All) 10.14.6
OS is 64bit: yes

LO "About" information:
Version: 6.3.0.4
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 8; OS: Mac OS X 10.14.6; UI render: GL; VCL: osx; 
Locale: nl-NL (en_MT.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Fred 2019-08-12 18:58:57 UTC
Created attachment 153326 [details]
Sample document, with screenshots

This is just a quick sample document.  Works fine in LO versions before 6.3.  This was created without language pack installed, but that won't make any difference.
Comment 2 Fred 2019-08-12 20:55:00 UTC
Update: friend confirmed the issue is not present in the Linux version as below:
(Dutch variant)

  Geïnstalleerd: 1:6.3.0-2
  Kandidaat:     1:6.3.0-2
  Versietabel:
 *** 1:6.3.0-2 900
        900 http://ftp.belnet.be/debian sid/main amd64 Packages
        100 /var/lib/dpkg/status
     1:6.3.0~rc2-1 -10
        -10 http://ftp.belnet.be/debian testing/main amd64 Packages
     1:6.1.5-3 -10
        -10 http://ftp.belnet.be/debian stable/main amd64 Packages
     1:5.2.7-1+deb9u7 -10
        -10 http://ftp.belnet.be/debian oldstable/main amd64 Packages
Comment 3 Fred 2019-08-12 20:57:19 UTC
Worth noting that the Linux 6.3.0.4 version is tagged as 6.3.0-2 in Debian, just to avoid confusion.
Comment 4 Xisco Faulí 2019-08-13 10:32:35 UTC
I can't reproduce it in

Version: 6.4.0.0.alpha0+
Build ID: 2812610f4f39ed5892da08864893c758325d1d39
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 5 Xisco Faulí 2019-08-13 10:51:31 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=aa687b22991e6c674b1d8653d52fbe9a50080174

author	Caolán McNamara <caolanm@redhat.com>	2019-05-29 10:02:58 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-05-29 14:56:04 +0200
commit aa687b22991e6c674b1d8653d52fbe9a50080174 (patch)
tree 9e048b07ba05362a99ea79cc79065afc4f45c734
parent b7b78dfc0719c3aa0e250b2992d3b04e135a26be (diff)
weld SfxDocumentInfoDialog

Bisected with: bibisect-mac64-6.3

Adding Cc: to Caolán McNamara
Comment 6 Oliver Brinzing 2019-08-13 13:07:21 UTC
*** Bug 126794 has been marked as a duplicate of this bug. ***
Comment 7 Caolán McNamara 2019-08-14 16:13:57 UTC
I wonder why its Mac only
Comment 8 Caolán McNamara 2019-08-14 16:14:50 UTC
If the dialog is resized manually, does it appear after that ?
Comment 9 Fred 2019-08-14 16:37:30 UTC
Yes!

That's one of the weirder workarounds I've ever come across, but indeed, that works.

Your question suggests you have an inking of where the problem hides?
Comment 10 Fred 2019-08-14 16:38:28 UTC
inking -> inkling.  I must get a new keyboard, or new fingers.
Comment 11 Caolán McNamara 2019-08-14 19:32:46 UTC
I suspect the page in question doesn't get an initial explicit resize event, perhaps because it "starts off" at its final size so never "resizes" away from that so the calculation depending on getting a resize never happens.
Comment 12 Commit Notification 2019-08-14 19:41:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2dbe7c08340d6505c528544327e7c27f6d690c6c%5E%21

tdf#126859 ensure initial height calculation

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Fred 2019-08-14 19:52:35 UTC
Thanks for that.

Not a coder so would not be able to compile , but if it makes into pre-releases I can grab the DMG and confirm fix.  Cheers.
Comment 14 Xisco Faulí 2019-08-15 11:58:32 UTC
I do confirm the commit submitted fixes the issue. Verified in a local build cherry-picking the commit
Comment 15 Caolán McNamara 2019-08-15 12:06:33 UTC
well, that's great, didn't think I get that lucky. Fixed in master, and I see a backport to 6-3 in gerrit.
Comment 16 Commit Notification 2019-08-15 13:25:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/ad77c80d8bead66674ac54a6418496b492fdc296%5E%21

tdf#126859 ensure initial height calculation

It will be available in 6.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Xisco Faulí 2019-08-19 11:09:20 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: cf3fb54debffeab546085e648c73c576343be9f4
CPU threads: 8; OS: Mac OS X 10.14.2; UI render: default; VCL: osx; 
Locale: en-US (en_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 18 Oliver Brinzing 2019-08-26 05:05:23 UTC
*** Bug 127153 has been marked as a duplicate of this bug. ***