tdf#126859 ensure initial height calculation

Change-Id: If4125886fd8d6b70f8d1bd7fc9d89ad093ff0b26